Fixed overlapping of part of the content in drop-down displayed list of fields in table

--- a/resources/sass/core/reset.scss
+++ b/resources/sass/core/reset.scss
@@ -587,12 +587,6 @@ blockquote {
   }
 }
 
-.dropdown-scrollable {
-  height: auto;
-  max-height: 400px;
-  overflow-x: hidden;
-}
-
 .btn-group > .btn {
   margin-left: -1px;
 }
